--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@types/react-dom": "^17.0.11",
     "@types/styled-components": "^5.1.22",
     "antd": "^4.18.6",
+    "axios": "^0.25.0",
+    "dotenv-webpack": "^7.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-uuid": "^1.0.2",
     "styled-components": "^5.3.3",
+    "swiper": "^8.0.5",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
